--- a/source/drafts/19-for-2019.rst
+++ b/source/drafts/19-for-2019.rst
@@ -1,22 +1,26 @@
 19 for 2019
 ===========
-:date: 05-20-2018
-:tags: 
-:category:
-:slug: 
+:date: 01-01-2019
+:tags: experiences
+:category: Experiences
+:slug: 19-for-2019
 :author: Lucy Wyman
 :img:
 
 
-Run 20 miles
+1. Run 20 miles
 
-Find a workout class to attend at least once per week
+2. Find a workout class to attend at least once per week
 
-See every movie nominated for the Oscar's best picture, if I haven't
+3. See every movie nominated for the Oscar's best picture, if I haven't
 already
 
-Visit a new US state
+4. Visit a new US state
 
-Try at least 1 new ice cream flavor
+5. Get a pedicure
+
+6. Delete my Facebook account
+
+7. Read 100 books
 
 
