Add reading lately January 2019

--- a/source/content/19-for-2019.rst
+++ b/source/content/19-for-2019.rst
@@ -42,8 +42,8 @@ Ok, enough typing. With that here are 19 things I hope to do in 2019:
 
 1. Run 20 miles (without stopping)
 
-~~2. Find a workout class to attend at least once per week (I'm starting
-   `this class`_ next week - we'll see how it goes!)~~ Update: Eli and
+2. --Find a workout class to attend at least once per week (I'm
+   starting `this class`_ next week - we'll see how it goes!)-- Update: Eli and
    I signed up for `Orange Theory`_ for 2 months, and plan to see how
    it goes.
 
