Add Hawaii blog post

--- a/source/content/19-for-2019.rst
+++ b/source/content/19-for-2019.rst
@@ -52,9 +52,9 @@ Ok, enough typing. With that here are 19 things I hope to do in 2019:
 
 3. See every movie nominated for the Oscar's best picture
 
-4. Visit a new US state
+4. --Visit a new US state-- (I'm going to count Hawaii)
 
-5. Get a pedicure
+5. --Get a pedicure--
 
 6. Delete my Facebook account
 
@@ -85,13 +85,13 @@ Ok, enough typing. With that here are 19 things I hope to do in 2019:
     I'm in general a happy person I'm not very kind when reflecting on
     myself. I want to start having more positive self-talk
 
-18. Take pictures of Eli and I in Hawaii - I was looking through our
+18. --Take pictures of Eli and I in Hawaii - I was looking through our
     Japan pictures, and there are so few that have us in them. While
     it's cool to reflect on the things we saw, it's also nice to see
-    that we were there.
+    that we were there.--
 
-19. Last but not least, get a massage! I've literally scheduled about
+19. --Last but not least, get a massage! I've literally scheduled about
     5 massages at `Olympus`_, and have always ended up cancelling
-    because something came up. I'm determine to get there this year.
+    because something came up. I'm determine to get there this year.--
 
 .. _Olympus: https://olympusspa.com/
