--- a/source/content/19-for-2019.rst
+++ b/source/content/19-for-2019.rst
@@ -63,7 +63,7 @@ Ok, enough typing. With that here are 19 things I hope to do in 2019:
 
 6. --Delete my Facebook account-- (This is a cheat since I only deactivated it, but I admit I still want to be on instagram so...deleting was off the table)
 
-7. Read 100 books
+7. --Read 100 books--
 
 8. Find a way to display my postcards
 
