Finished sub-7 minute mile

--- a/source/content/20-for-2020.rst
+++ b/source/content/20-for-2020.rst
@@ -51,7 +51,8 @@ On that note....the things I want to do in 2020:
    feel how it's starting to affect my posture and shoulders.
 3. Submit a crossword to the NYT
 4. Go to at least 5 spanish meetups
-5. Run a sub-7 minute mile
+5. :strike:`Run a sub-7 minute mile` On January 17, I ran a 6:59 mile - barely squeaked under, but I
+   did it!
 6. :strike:`Sign up for my own health insurance`
 7. Get a new bike
 8. Host board games with friends at least 3 times
